<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginBottom="40dp"
    android:background="@android:color/transparent"
    android:clickable="true">


    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:gravity="center_horizontal"
        android:orientation="vertical">

        <TextView
            android:id="@+id/tv_cc_title"
            style="@style/title_style"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="20dp"
            android:gravity="center_horizontal"
            android:text="@string/your_credit_card_title" />


        <ImageButton
            android:id="@+id/bt_scan_card"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_above="@+id/container_date_1"
            android:layout_alignBottom="@+id/et_cc_number_til"
            android:layout_alignParentEnd="true"
            android:layout_alignTop="@+id/et_cc_number_til"
            android:layout_below="@+id/tv_cc_title"
            android:layout_marginEnd="20dp"
            android:background="@android:color/transparent"
            android:src="@drawable/camera" />

        <android.support.design.widget.TextInputLayout
            android:id="@+id/et_cc_number_til"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/tv_cc_title"
            android:layout_toLeftOf="@+id/bt_scan_card">

            <EditText
                android:id="@+id/et_cc_number"
                style="@style/default_edit_text_style"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/tv_cc_title"
                android:layout_centerHorizontal="true"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:layout_marginTop="20dp"
                android:digits="0123456789 "
                android:ems="10"
                android:gravity="center"
                android:hint="@string/hint_cc_number"
                android:inputType="number"
                android:maxLength="23"
                android:singleLine="true" />
        </android.support.design.widget.TextInputLayout>


        <LinearLayout
            android:id="@+id/container_date_1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/et_cc_number_til"
            android:layout_centerHorizontal="true"
            android:gravity="center"
            android:orientation="horizontal">

            <com.weiwangcn.betterspinner.library.material.MaterialBetterSpinner
                android:id="@+id/et_month"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="bottom"
                android:layout_marginEnd="20dp"
                android:layout_marginStart="20dp"
                android:layout_weight="1"
                android:ems="10"
                android:gravity="center_horizontal"
                android:hint="@string/hint_month"
                android:singleLine="true"
                app:met_floatingLabel="normal" />

            <com.weiwangcn.betterspinner.library.material.MaterialBetterSpinner
                android:id="@+id/et_year"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="bottom"
                android:layout_marginEnd="20dp"
                android:layout_weight="1"
                android:ems="10"
                android:gravity="center_horizontal"
                android:hint="@string/hint_year"
                android:singleLine="true"
                app:met_floatingLabel="normal" />

            <android.support.design.widget.TextInputLayout
                android:id="@+id/et_cvv_number_til"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="20dp"
                android:layout_weight="1"
                android:gravity="center_horizontal">

                <EditText
                    android:id="@+id/et_cvv_number"
                    style="@style/default_edit_text_style"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:digits="0123456789"
                    android:ems="10"
                    android:hint="@string/hint_cvv"
                    android:inputType="number"
                    android:maxLength="4"
                    android:singleLine="true" />
            </android.support.design.widget.TextInputLayout>

        </LinearLayout>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/et_name_in_card_til"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/container_date_1">

            <EditText
                android:id="@+id/et_name_in_card"
                style="@style/default_edit_text_style"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/container_date_1"
                android:layout_centerHorizontal="true"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:layout_marginTop="20dp"
                android:ems="10"
                android:gravity="center"
                android:hint="@string/hint_cc_name"
                android:inputType="textPersonName"
                android:singleLine="true" />

        </android.support.design.widget.TextInputLayout>

        <Button
            android:id="@+id/bt_add_cc_request"
            style="@style/button_red"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/et_name_in_card_til"
            android:layout_centerHorizontal="true"
            android:layout_marginBottom="20dp"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:text="@string/create_account" />

    </RelativeLayout>


</RelativeLayout>